@@ -112,4 +112,6 @@
 ! API: almost everyone that uses a Input/OutputStream now writes the version number into the stream. This will help to implement backwards compatibility. This should be the last break in the file format.
 ! API: DockableListener has an additional method "titleExchanged" which can be used to exchange a DockTitle.
 ! API: CDockable and subclasses can now hide or show their titles at any time.
-- Layout: BubbleDisplayer now shows a border if the title is not null, or if the dockable is not a station 
+- Layout: BubbleDisplayer now shows a border if the title is not null, or if the dockable is not a station
+- API: PredefinedDockSituation can use backup factories for elements that are missing in the cache. DockFrontend supports these backup factories as well.
+- API: DockFactories can now be unregistered from DockFrontend  
